<resources>
    <string name="app_name">UniPractice</string>
    <string name="student"> Fill in the student card</string>
    <string name="surname">Enter your surname</string>
    <string name="name">Enter your first name</string>
    <string name="secname">Enter your second name</string>
    <string name="group">Enter your group number</string>
    <string name="faculty">Enter your faculty</string>
    <string name="confirm">Confirm the information given</string>
    <string name="title">Student card application</string>
    <string name="red">Switch to red</string>
    <string name="green">Switch to green</string>
    <string name="blue">Switch to blue</string>
    <string name="yellow">Switch to yellow</string>
    <string name="change">Change the layout</string>
    <string name="success">You have successfully registered</string>
    <string name="lab2">Switch to the 2nd lab</string>
    <string name="lab3">Switch to the 3nd lab</string>
    <string name="navigation">Menu</string>
</resources>
